--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 	"dependencies": {
 		"meow": "^5.0.0",
 		"lighthouse": "^5.0.0",
-		"underscore": "^1.9.0"
+		"underscore": "^1.9.0",
+		"chrome-launcher": *
 	},
 	"devDependencies": {
 		"ava": "^2.1.0",
